# AI_solo_coder_task_B_132

./: README.md  docker-compose.yml  start-frontend.bat
backend/: Cargo.toml  Dockerfile
backend/config/: app_config.json
backend/src/: alarm_ws.rs  alerts.rs  analysis_service.rs  cascade_error_analyzer.rs  chronometry_comparator.rs  clickhouse_store.rs  config_loader.rs  dtu_receiver.rs  era_precision_comparator.rs  error_compensator.rs  hydraulic.rs  hydraulic_compute_pool.rs  hydraulic_simulator.rs  main.rs  metrics.rs  models.rs  mqtt_receiver.rs  vr_clepsydra.rs  websocket.rs
clickhouse/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  test_runner.html
frontend/js/: clepsydra_3d.js  feature_panels.js  precision_panel.js  test_runner.js
frontend/js/panels/: cross_era_compare_panel.js  dynasty_compare_panel.js  error_transfer_panel.js  virtual_operate_panel.js
frontend/src/: clepsydra.js  particles.js  water.js
simulator/: Dockerfile  requirements.txt  simulator.py
