[package]
name = "clepsydra-backend"
version = "0.1.0"
edition = "2021"
description = "古代水运仪象台漏壶水力精度仿真与误差补偿系统后端"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24"
clickhouse = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rand = "0.8"
once_cell = "1.19"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
bytes = "1.5"
uuid = { version = "1.0", features = ["v4"] }
prometheus = { version = "0.13", features = ["process"] }
